--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -116,179 +116,11 @@
   }
   
   /* Venn Diagram */
-
-  .venn-area .label {
-    text-transform: uppercase;
-    font-size: 0.45rem;
-    letter-spacing: 0.02em;
-    font-family: 'Roboto Mono';
-  }
-  
-  .venn-intersection:last-child {
-    transform-origin: 50% 50%;
-    font-size: 0.5rem;
-  }
-  
-  .venn-intersection text {
-    opacity: 0;
-  }
-  
-  .venn-intersection:last-child text {
-    opacity: 1;
-    fill-opacity: 1;
-  }
-  
-  .venn.visualisation-enter.visualisation-enter-active,
-  .venn.visualisation-leave.visualisation-leave-active {
-    transition: opacity 300ms var(--ease-out-cubic);
-    transition-property: opacity,transform;
-  }
-  
-  .venn.visualisation-enter {
-    opacity: 0.01;
-    transform: translate3d(-50%,-50%,0) scale(0.9);
-  }
-  
-  .venn.visualisation-enter.visualisation-enter-active {
-    opacity: 1;
-    transform: translate3d(-50%,-50%,0);
-  }
-  
-  .venn.visualisation-leave {
-    opacity: 1;
-  }
-  
-  .venn.visualisation-leave.visualisation-leave-active {
-    opacity: 0;
-    transform: translate3d(-50%,-50%,0) scale(0.9);
-  }
-  
-  .visualisation-enter .venn-intersection:last-child {
-    transform: scale(0.01);
-    animation: none;
-  }
-  
-  .visualisation-enter.visualisation-enter-active .venn-intersection:last-child {
-    transform: none;
-    transition: transform 300ms 150ms var(--ease-out-cubic);
-  }
-  
-  .venn-circle path {
-    fill: rgba(106, 0, 199, 0.2);
-    fill: url(#gradient);
-  }
-  
-  .venn-circle:nth-child(2n) path {
-    fill: rgba(106, 0, 199, 0.4);
-  }
-  
-  @keyframes wave {
-    0% {
-      tranform: rotate(0deg);
-    }
-    10% {
-      transform: rotate(var(--degrees));
-    }
-    20% {
-      transform: rotate(-var(--degrees));
-    }
-    30% {
-      transform: rotate(var(--degrees));
-    }
-    40% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(0deg);
-    }
-  }
-  /**
- * Basic typography style for copy text
- */
-@media (min-width: 1600px) {
-    html {
-      font-size: 34px;
-    }
-  }
-  
-  @media (max-width: 1599px) {
-    html { font-size: 34px }
-  }
-  
-  @media (max-width: 1064px) {
-    html {
-      font-size: 28px
-    }
-  }
-  
-  @media (max-width: 880px) {
-    html {
-      font-size: 26px
-    }
-  }
-  
-  @media (max-width: 820px) {
-    html {
-      font-size: 22px
-    }
-  }
-  
-  @media (max-width: 736px) {
-    html {
-      font-size: 19px;
-    }
-  
-    .h4 {
-      font-size: 1.2rem;
-      line-height: 2rem;
-    }
-  
-    .lh3 {
-      line-height: 1.35em;
-    }
-  }
-  
-  .font-monospace {
-    font-family: 'Roboto Mono', monospace;
-  }
-  
-  .font-alternative {
-    font-family: 'Karla';
-  }
-  
-  .small {
-    font-size: 13px;
-    line-height: normal;
-  }
-  
-  .large-text {
-    font-size: 5.5rem;
-    font-variant: small-caps;
-    transform: scale(0.9) translateY(5%);
-    text-indent: 0.5em;
-    margin-left: -0.5em;
-  }
-  
-  .medium-text {
-    font-size: 2.5rem;
-  }
-  
-  .normal-text {
-    font-size: 1.5rem;
-  }
-  
-  .lh1 {
-    line-height: 0.55em;
-  }
-  
-  .lh2 {
-    line-height: 0.75em;
-  }
-  
-  .lh3 {
-    line-height: 1.5em;
-  }
-  
+  @import './../components/VennDiagram/styles.css';
+  @import './../components/Gif/styles.css';
+  @import './../components/App/typography.css';
+  @import './../components/Toggle/styles.css';
+  @import './../components/DistortedText/styles.css';
 
   .body {
     font-family: Georgia, 'Times New Roman', serif;
